docs(readme): update todos